ADD gc and mysql lock